--- a/BDShop/templates/accounts/forgotPassword.html
+++ b/BDShop/templates/accounts/forgotPassword.html
@@ -6,10 +6,12 @@
 {% block content %}
 
 <link rel="stylesheet" href="{% static 'forgotpass.css' %}">
+
 <div class="forgot-container">
     <h2>Forgot Password</h2>
-    <p>Enter your email address</p>
+    <p>Enter your email address to receive a password reset link</p>
 
+    <!-- Django messages -->
     {% if messages %}
         {% for message in messages %}
             <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">
@@ -18,16 +20,17 @@
         {% endfor %}
     {% endif %}
 
-    <form method="post" action="{% url 'forgotpass' %}">
+    <form method="post" action="{% url 'forgotPassword' %}">
         {% csrf_token %}
         <div class="form-group">
-            <input type="email" name="email" placeholder="Enter your email" required>
+            <input type="email" name="email" placeholder="Enter your email" required class="form-control">
         </div>
-        <button type="submit" class="btn">Send code via SMS</button>
+        <button type="submit" class="btn">Send Email to reset password</button>
     </form>
 
     <p class="links">
         <a href="{% url 'register' %}">Sign up?</a>
     </p>
 </div>
+
 {% endblock %}
