--- a/BDShop/templates/store/cart.html
+++ b/BDShop/templates/store/cart.html
@@ -38,7 +38,7 @@
 
     <div class="text-end mt-4">
         <h4><strong>Total Price:</strong> ${{ total|floatformat:2 }}</h4>
-        <a href="{% url 'checkout' %}" class="btn btn-primary btn-lg mt-3">Proceed to Checkout</a>
+        <a href="{% url 'orders:checkout' %}" class="btn btn-primary btn-lg mt-3">Proceed to Checkout</a>
     </div>
 
     {% else %}
