--- a/BDShop/templates/base.html
+++ b/BDShop/templates/base.html
@@ -199,7 +199,7 @@ nav ul li a {
 
 </style>
 
-    <a href="{% url 'cart' %}" class="cartn">
+    <a href="{% url 'carts:cart' %}" class="cartn">
         <img class="cartn" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQGd2sjxFQjvIeJHrB6h01ODTyCuzYmEwvy1w&s"
             height="30" width="30" alt="Cart">
     </a>
