--- a/BDShop/templates/dashboard/my_orders.html
+++ b/BDShop/templates/dashboard/my_orders.html
@@ -101,7 +101,7 @@
                     <p>{{ order.date }}</p>
                 </div>
                 <div class="order-right">
-                    <span class="total">Total: {{ order.order_total }}$</span>
+                    <span class="total">Total: {{ order.order_total }}৳</span>
                 </div>
             </div>
             {% endfor %}
