--- a/BDShop/templates/home.html
+++ b/BDShop/templates/home.html
@@ -71,7 +71,7 @@
       <a href="{% url 'product_detail' product.slug %}" class="text-decoration-none">
         <img src="{{ product.image.url }}" alt="{{ product.name }}">
         <h3>{{ product.name }}</h3>
-        <p>${{ product.price }}</p>
+        <p>৳{{ product.price }}</p>
         <button class="btn-gradient" style="margin: 20px;">View Details</button><div><div></div></div>
         
       </a>
