--- a/BDShop/templates/store/product_detail.html
+++ b/BDShop/templates/store/product_detail.html
@@ -12,7 +12,7 @@
 
         <div class="col-md-6">
     <h2>{{ product.name }}</h2>
-    <p class="text-muted">Price: ${{ product.price }}</p>
+    <p class="text-muted">Price: ৳{{ product.price }}</p>
     <p>{{ product.description }}</p>
     <p>Stock: {{ product.stock }}</p>
     <a href="#" class="btn-gradient" style="text-decoration: none;">Buy Now</a>
