--- a/BDShop/templates/home.html
+++ b/BDShop/templates/home.html
@@ -12,7 +12,8 @@
       <div class="carousel-item active">
           
         <img src="https://img.lazcdn.com/us/domino/1b58df59-e45d-4f2a-9352-eac9f56715b5_BD-1976-688.jpg_2200x2200q80.jpg_.webp"
-             class="d-block w-100" alt="Slide 1">
+             class="d-block w-100"  alt="Slide 1">
+             
       </div>
       <div class="carousel-item">
         <img src="https://waltonbd.com/image/catalog/category-banner/air-conditioner/coatec-series.jpg" 
@@ -59,8 +60,10 @@
     opacity: 0;
   }
 }
-
-
+.badfeat {
+  text-align: center;
+  margin-bottom: 30px;
+}
  </style>
 <h1 class="badfeat">Featured Products</h1>
 <section class="products-section container py-5">
@@ -68,7 +71,7 @@
   <div class="products-container">
     {% for product in products %}
     <div class="product-card">
-      <a href="{% url 'product_detail' product.slug %}" class="text-decoration-none">
+      <a href="{% url 'store:product_detail' product.slug %}" class="text-decoration-none">
         <img src="{{ product.image.url }}" alt="{{ product.name }}">
         <h3>{{ product.name }}</h3>
         <p>৳{{ product.price }}</p>
