Update latest code

--- a/BDShop/templates/base.html
+++ b/BDShop/templates/base.html
@@ -125,7 +125,7 @@ nav ul li a {
 </li>
 
           <li>
-  <a class="nav-item" href="{% url 'store:checkout' %}">
+  <a class="nav-item" href="{% url 'store:store' %}">
     <i class="fa-solid fa-store"></i> Store<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
   </a>
