--- a/BDShop/templates/accounts/forgot-Password.html
+++ b/BDShop/templates/accounts/forgot-Password.html
@@ -20,7 +20,7 @@
         {% endfor %}
     {% endif %}
 
-    <form method="post" action="{% url 'forgotPassword' %}">
+    <form method="post" action="{% url 'forgotpass' %}">
         {% csrf_token %}
         <div class="form-group">
             <input type="email" name="email" placeholder="Enter your email" required class="form-control">
