--- a/BDShop/templates/store/cart.html
+++ b/BDShop/templates/store/cart.html
@@ -44,7 +44,7 @@
     {% else %}
     <div class="alert alert-info text-center mt-4">
         <p>Your cart is empty.</p>
-        <a href="{% url 'store' %}" class="btn btn-outline-primary mt-2">Continue Shopping</a>
+        <a href="{% url 'store:store' %}" class="btn btn-outline-primary mt-2">Continue Shopping</a>
     </div>
     {% endif %}
 </div>
